--- a/app/views/devise/shared/_side_bar.html.haml
+++ b/app/views/devise/shared/_side_bar.html.haml
@@ -8,16 +8,18 @@
             = current_user.name
           %ul.side-header__box__menu
             %li.side-header__box__menu__new-group
-              %link_to{href: "/groups/new"}
-                %i.fa.fa-edit
+              = link_to new_group_path do
+                = fa_icon 'pencil-square-o', class: 'fa-edit'
             %li.side-header__box__menu__edit-user
               = link_to edit_user_path(current_user) do
-                = fa_icon 'cog', class: 'icon'
+                = fa_icon 'cog', class: 'fa-cog'
                 
       .groups
-        .group
-          .group__name
-            ミノル組
-          .group__messeage
-            メッセージ
+        - current_user.groups.each do |group|
+          .group
+            = link_to '#' do
+              .group__name
+                = group.name           
+              .group__messeage
+                メッセージはまだありません。
 
