--- a/app/assets/stylesheets/_main_chat.scss
+++ b/app/assets/stylesheets/_main_chat.scss
@@ -55,38 +55,34 @@
 }
 
 .chat_form{
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  position: fixed;
+  bottom:0;
   width:100%;
-  height:50px;
+  padding:15px 40px;
   background-color:#ddd;
-  padding:10px 0 10px 0;
-  .form_submit {
-    margin-right:40px;
+.form__message{
+  position: relative;
+  width:950px;
+  height:50px;
+  margin-right:25px;
   }
-  .btn {
-    background-color:#38aef0;
-    color:#fff;
-    height:50px;
-    width:70px;
-    border:none;
+  .hidden {
+  overflow: hidden;
+  display:none;
   }
-
-  .form_input {
-    position: relative;
-    width:100%;
-    padding-left:40px;
-    input {
-    width:98%;
-    height:50px;
-    }
-    .fa-image {
+  .form__mask__image {
+  position: relative;
+  }
+  .icon{
     position: absolute;
-    right:30px;
-    top:38%;
-    }
-  
+    line-height: 50px;
+    right:50px;
   }
-
+  .form__submit{
+    width: 70px;
+    height:50px;
+    border-style: none;
+    color:#fff;
+    background-color:#38aef0;
+  }
 }
