--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -13,13 +13,10 @@
     .person-message
       %p 初めての投稿です。
   .chat_form
-    .form_input
-      %input{placeholder:"type a message", type:  "text"}/
-      %label
-        .fas.fa-image
-        %input.file-coll{type: "file"}/
-    .form_submit
-      %input{type: "submit", value: "Send", class: "btn" }/
-
-
-
+    .chat-form__input
+      = form_for [@group, @message] do |f|
+        = f.text_field :content, class: 'form__message', placeholder: 'type a message'
+        = f.label :image, class: 'form__mask__image' do
+          = icon('fas', 'image', class: 'icon')
+        = f.file_field :image, class: 'hidden'
+        = f.submit 'Send', class: 'form__submit'
