--- a/app/views/shared/_side_bar.html.haml
+++ b/app/views/shared/_side_bar.html.haml
@@ -18,4 +18,4 @@
           .group__name
             = group.name           
           .group__messeage
-            メッセージはまだありません。
+            = group.show_last_message
