--- a/app/assets/stylesheets/_main_chat.scss
+++ b/app/assets/stylesheets/_main_chat.scss
@@ -1,5 +1,5 @@
 .chat {
-  width:100%;
+  width:calc(100vw - 300px);
   height:100vh;
   &_header{
     display: flex;
@@ -27,7 +27,7 @@
   margin: 28px 40px;
   padding: 15px 20px 15px 20px ;
   border: 1px solid skyblue;
-  color : skyblue;  
+  a{color : skyblue;}  
 }
 
 .chat_body {
