--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -20,6 +20,6 @@
       = form_for [@group, @message] do |f|
         = f.text_field :content, class: 'form__message', placeholder: 'type a message'
         = f.label :image, class: 'form__mask__image' do
-          = icon('fas', 'image', class: 'icon')
+          = icon('fa', 'image', class: 'icon')
         = f.file_field :image, class: 'hidden'
         = f.submit 'Send', class: 'form__submit'
